--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3900,11 +3900,12 @@ input, select, textarea {
 
 				#menu ul.links > li {
 					padding: 0;
+					color: rgb(255, 251, 0);
 				}
 
 					#menu ul.links > li > a:not(.button) {
 						border: 0;
-						border-top: solid 1px rgba(212, 212, 255, 0.1);
+						border-top: solid 1px rgb(0, 0, 0);
 						display: block;
 						font-size: 0.8em;
 						font-weight: 600;
